--- a/html/technical.html
+++ b/html/technical.html
@@ -2,81 +2,117 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../css/events.css">
-  <title>Hackerz | Technical Events</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/events.css">
+    <title>Hackerz | Technical Events</title>
 </head>
 
 <body>
-  <nav>
-    <a href="/events"><img src="../images/NewHackerzWhite.png" width="80" alt="hackerzLogo" class="hackerzLogo" /></a>
-    <h3 class="event-header title glitch" data-text="Technical Events">Technical Events</h3>
-    <a href="/login" id="login-btn">
-      Login
-    </a>
-  </nav>
-  <section class="event-container" id="technical">
-    <div class="grid">
-      <div class="card2 item1">
-        <h3 class="title">Scavenger Hunt</h3>
-        <img class="hideableLogo" src="../icons/scavenger-filled.png" />
-        <p class="desc">Trace down the stack, hunt bugs and lead your way to solve the ultimate puzzle through clues,
-          all while debugging the code.
-        </p>
-        <a class="bttn" href="/event/scavenger-hunt">Learn More</a>
-      </div>
-      <div class="card2 item2">
-        <h3 class="title">Papyrus</h3>
-        <img class="hideableLogo" src="../icons/paper-filled.png" />
-        <p class="desc">Present your paper on topics of concern to the specialized panel of judges. The best work that
-          stands out takes the title.
-        </p>
-        <a class="bttn" href="/event/papyrus">Learn More</a>
-      </div>
-      <div class="card2 item3">
-        <h3 class="title">Quizzard</h3>
-        <img class="hideableLogo" src="../icons/quiz-filled.png" />
-        <p class="desc">Hands on the buzzer! Blaze through a series of technical quizzes to rise up the ranks. Can you
-          beat the quiz master?
-        </p>
-        <a class="bttn" href="/event/quizzard">Learn More</a>
-      </div>
-      <div class="card2 item4">
-        <h3 class="title">Code Collision</h3>
-        <img class="hideableLogo" src="../icons/code-filled.png" />
-        <p class="desc">Coding Solos! Come brawl in this fast
-          paced knockout to prove your algorithmic prowess!
-        </p>
-        <a class="bttn" href="/event/code-collision">Learn More</a>
-      </div>
-      <div class="card2 item5">
-        <h3 class="title">Developer Date</h3>
-        <img class="hideableLogo" src="../icons/developer-filled.png" />
-        <p class="desc">Coding Duos! But with a twist. Two people, double the trouble. Do you have the best better half?
-        </p>
-        <a class="bttn" href="/event/developer-date">Learn More</a>
-      </div>
-      <div class="card2 item6">
-        <h3 class="title">Intel Inside</h3>
-        <img class="hideableLogo" src="../icons/intel-filled.png" />
-        <p class="desc">Get your hands dirty in this hardware mode! Build a PC from scratch from isolated components.
-          Fastest fingers first.
-        </p>
-        <a class="bttn" href="/event/intel-inside">Learn More</a>
-      </div>
-    </div>
-    <div id="particle-bg"></div>
+    <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color">
+        <img src="../images/NewHackerzWhite.png" width="80" alt="hackerzLogo" class="hackerzLogo" />
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+            aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="/about" class="menu-item nav-link" id="about-btn">
+                        About
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/events" class="menu-item nav-link" id="about-btn">
+                        Events
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/contact" class="menu-item nav-link" id="about-btn">
+                        Contact
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/login" class="menu-item" id="login-btn">
+                        Login
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="menu-item" id="logout-btn">
+                        Logout
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <section class="event-container" id="technical">
+        <h3 class="event-header title glitch" data-text="Technical Events">Technical Events</h3>
+        <div class="grid">
+            <div class="card2 item1">
+                <h3 class="title">Scavenger Hunt</h3>
+                <img class="hideableLogo" src="../icons/scavenger-filled.png" />
+                <p class="desc">Trace down the stack, hunt bugs and lead your way to solve the ultimate puzzle through
+                    clues,
+                    all while debugging the code.
+                </p>
+                <a class="bttn" href="/event/scavenger-hunt">Learn More</a>
+            </div>
+            <div class="card2 item2">
+                <h3 class="title">Papyrus</h3>
+                <img class="hideableLogo" src="../icons/paper-filled.png" />
+                <p class="desc">Present your paper on topics of concern to the specialized panel of judges. The best
+                    work that
+                    stands out takes the title.
+                </p>
+                <a class="bttn" href="/event/papyrus">Learn More</a>
+            </div>
+            <div class="card2 item3">
+                <h3 class="title">Quizzard</h3>
+                <img class="hideableLogo" src="../icons/quiz-filled.png" />
+                <p class="desc">Hands on the buzzer! Blaze through a series of technical quizzes to rise up the ranks.
+                    Can you
+                    beat the quiz master?
+                </p>
+                <a class="bttn" href="/event/quizzard">Learn More</a>
+            </div>
+            <div class="card2 item4">
+                <h3 class="title">Code Collision</h3>
+                <img class="hideableLogo" src="../icons/code-filled.png" />
+                <p class="desc">Coding Solos! Come brawl in this fast
+                    paced knockout to prove your algorithmic prowess!
+                </p>
+                <a class="bttn" href="/event/code-collision">Learn More</a>
+            </div>
+            <div class="card2 item5">
+                <h3 class="title">Developer Date</h3>
+                <img class="hideableLogo" src="../icons/developer-filled.png" />
+                <p class="desc">Coding Duos! But with a twist. Two people, double the trouble. Do you have the best
+                    better half?
+                </p>
+                <a class="bttn" href="/event/developer-date">Learn More</a>
+            </div>
+            <div class="card2 item6">
+                <h3 class="title">Intel Inside</h3>
+                <img class="hideableLogo" src="../icons/intel-filled.png" />
+                <p class="desc">Get your hands dirty in this hardware mode! Build a PC from scratch from isolated
+                    components.
+                    Fastest fingers first.
+                </p>
+                <a class="bttn" href="/event/intel-inside">Learn More</a>
+            </div>
+        </div>
+        <div id="particle-bg"></div>
 
-  </section>
-
-  <script src="../js/bootstrap.min.js"></script>
-  <script src="../js/particles.js"></script>
-  <script>
-    particlesJS.load("particle-bg", "../js/particles-config.json");
-  </script>
+    </section>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/particles.js"></script>
+    <script>
+        particlesJS.load("particle-bg", "../js/particles-config.json");
+    </script>
+    <script src="../js/loginHelper.js"></script>
 </body>
 
 </html>
