--- a/html/gaming.html
+++ b/html/gaming.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="../js/axios.min.js"></script>
+    <script src="../js/whoamiHelper.js"></script>
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/events.css">
     <title>Hackerz | Gaming</title>
