--- a/html/technical.html
+++ b/html/technical.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/events.css">
+    <script src="../js/axios.min.js"></script>
+    <script src="../js/whoamiHelper.js"></script>
     <title>Hackerz | Technical Events</title>
 </head>
 
