--- a/html/login.html
+++ b/html/login.html
@@ -58,7 +58,7 @@
                                     </div>
                                     <div class="col-12 col-auto">
                                         <div class="mat-input-outer">
-                                            <input type="number" max="4" id="year" name="year" placeholder="Year(1 ~ 4)"
+                                            <input type="text" max="4" id="year" name="year" placeholder="Current year of study"
                                                 autocomplete="on" />
                                         </div>
                                     </div>
@@ -70,7 +70,7 @@
                                     </div>
                                     <div class="col-12 col-auto">
                                         <div class="mat-input-outer">
-                                            <input type="tel" id="phone-num" name="mobile" placeholder="Mobile Number"
+                                            <input type="text" id="phone-num" name="mobile" placeholder="Mobile Number"
                                                 autocomplete="on" />
                                         </div>
                                     </div>
