--- a/html/index.html
+++ b/html/index.html
@@ -1,52 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/jquery.min.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="js/jquery.min.js"></script>
 
-    <title>Hackerz</title>
-  </head>
-  <body>
-    <!-- Modal 1 -->
+  <title>Hackerz</title>
+</head>
 
-    <div class="container-fluid">
-      <div id="particle-bg"></div>
-
-      <div
-        class="row justify-content-center align-items-center"
-        id="logo-container"
-      >
-        <div class="col col-12 col-auto text-center">
-          <img src="images/hackerzGlitch.gif" id="logo" />
-        </div>
-        <div class="col col-12 col-auto text-center">
-          <div class="lds-ring">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-          <p class="glitch" id="txt" data-text=""></p>
-          <p class="glitch" id="timer" data-text=""></p>
-        </div>
+<body>
+  <div id="particle-bg"></div>
+  <div class="wrapper">
+    <img src="images/CIT Logo White.png" class="collegeLogo" />
+    <h2>DEPARTMENT OF</h3>
+      <h1>COMPUTER SCIENCE &</h1>
+      <h1>INFORMATION TECHNOLOGY</h1>
+      <h4>PROUDLY PRESENTS</h4>
+      <img src="images/hackerzGlitch.gif" id="logo" />
+      <h4 style="margin-bottom: 30px;">A NATIONAL LEVEL TECHNICAL SYMPOSIUM</h4>
+      <p class="glitch" style="font-family: 'VT323', monospace; width: 100%;" id="timer" data-text=""></p>
+      <div class="nav">
+        <a class="btn" href="/about">ABOUT</a>
+        <a class="btn" href="/events">EVENTS</a>
+        <a class="btn" href="/contact">CONTACT</a>
       </div>
+  </div>
+</body>
 
-      <!-- TV effect -->
-      <section>
-        <div id="topDiv"></div>
-        <div id="centerDiv"></div>
-        <div id="bottomDiv"></div>
-      </section>
-    </div>
-  </body>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/baffle.min.js"></script>
+<script src="js/particles.js"></script>
+<script src="js/main.js"></script>
 
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/baffle.min.js"></script>
-  <script src="js/particles.js"></script>
-  <script src="js/main.js"></script>
 </html>
