--- a/html/single_event.html
+++ b/html/single_event.html
@@ -7,12 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/single_event.css">
+    <script src="../js/axios.min.js"></script>
+    <script src="../js/whoamiHelper.js"></script>
     <title>Hackerz | ${event.name}</title>
 </head>
 
 <body>
     <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color">
-        <img src="../images/NewHackerzWhite.png" width="80" alt="hackerzLogo" class="hackerzLogo" />
+        <a href="/">
+            <div style="display: flex; flex-direction: row;">
+                <img src="../images/CIT Logo White.png" class="logo"
+                    style="padding-left: 0; border-right: 1px solid white;" />
+                <img src="../images/NewHackerzWhite.png" class="logo" />
+            </div>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
             aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -103,7 +111,6 @@
     </section>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/axios.min.js"></script>
     <script src="../js/particles.js"></script>
     <script src="../js/loginHelper.js"></script>
     <script src="../js/registrationHelper.js"></script>
