--- a/html/technical.html
+++ b/html/technical.html
@@ -13,8 +13,14 @@
 </head>
 
 <body>
-    <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color">
-        <img src="../images/NewHackerzWhite.png" width="80" alt="hackerzLogo" class="hackerzLogo" />
+    <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color" style="padding-left: 0;">
+        <a href="/">
+            <div style="display: flex; flex-direction: row;">
+                <img src="../images/CIT Logo White.png" class="logo"
+                    style="padding-left: 0; border-right: 1px solid white;" />
+                <img src="../images/NewHackerzWhite.png" class="logo" />
+            </div>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
             aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
