--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,8 @@
       <h1>INFORMATION TECHNOLOGY</h1>
       <h4>PROUDLY PRESENTS</h4>
       <img src="images/hackerzGlitch.gif" id="logo" />
-      <h4 style="margin-bottom: 30px;">A NATIONAL LEVEL TECHNICAL SYMPOSIUM</h4>
+      <h4 style="margin-bottom: 8px;">A NATIONAL LEVEL TECHNICAL SYMPOSIUM</h4>
+      <h1>SEPTEMBER 6, 2019</h1>
       <p class="glitch" style="font-family: 'VT323', monospace; width: 100%;" id="timer" data-text=""></p>
       <div class="nav">
         <a class="btn" href="/about">ABOUT</a>
