--- a/html/about.html
+++ b/html/about.html
@@ -11,8 +11,28 @@
 </head>
 
 <body>
+    <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color" style="padding-left: 0;">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+            aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="/events" class="menu-item nav-link" id="about-btn">
+                        Events
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/contact" class="menu-item nav-link" id="about-btn">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="wrapper">
-        <a href="/events" style="text-decoration: none;">
+        <a href="/" style="text-decoration: none;">
             <div style="display: flex; flex-direction: row;">
                 <img src="../images/CIT Logo White.png" class="logo" id="collegeLogo" />
                 <img src="../images/hackerzGlitch.gif" class="logo" />
@@ -46,6 +66,8 @@
             </div>
         </section>
     </div>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 
 </html>
