Add ScrollBar and  Fix Autocomplete

--- a/html/login.html
+++ b/html/login.html
@@ -95,13 +95,13 @@
                                     <div class="col-12 col-auto">
                                         <div class="mat-input-outer">
                                             <input type="email" name="email" placeholder="Email" id="login-email"
-                                                autocomplete="on" />
+                                                autocomplete="off" />
                                         </div>
                                     </div>
                                     <div class="col-12 col-auto">
                                         <div class="mat-input-outer">
                                             <input type="password" name="password" id="login-password"
-                                                placeholder="Password" autocomplete="on" />
+                                                placeholder="Password" autocomplete="off" />
                                         </div>
                                     </div>
                                 </div>
